--- a/SO77902525/SO77902525.Client/Pages/Weather.razor
+++ b/SO77902525/SO77902525.Client/Pages/Weather.razor
@@ -4,7 +4,7 @@
 @rendermode InteractiveServer
 
 <h1>Weather</h1>
-<div class="alert alert-primary">Rneder Mode: @_mode</div>
+<div class="alert alert-primary">Render Mode: @_mode</div>
 <p>This component demonstrates showing data.</p>
 
 @if (forecasts == null)
